# workshops

./: .coverage  .dockerignore  .example.env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_DOCKER.md  alembic.ini  cliff.toml  docker-compose.yaml  docker-compose.yml  handle.xlsx  index.html  logging.yaml  main.py  models.py  pyproject.toml  setting.example.yaml  settings.example.yaml  settings.schema.yaml  settings.test.yaml
.github/workflows/: deploy.yaml  deploy.yml  python-app.yml  test.yaml  tests.yaml
SWP/: Add workshop.bru  Get all workshops.bru  Update workshops.bru  bruno.json  change role.bru  checkin.bru  collection.bru  get checkins.bru
alembic/: env.py
alembic/versions/: 0dae75d4309b_initial_migration.py  67473ab860c6_adding_superuser.py  _2024_10_30_01_20_.py  _2024_10_31_02_46_.py  _2025_08_06_16_25_refactor.py  _2025_08_11_22_25_remain_places.py  _2025_08_15_21_20_remove_is_registrable_field.py  _2025_11_06_04_11_separate_title_desc_by_languages_add_.py  _2025_11_06_23_50_add_both_to_languages_selector.py  _2025_11_20_21_39_remove_db_side_null_checks_to_support_.py  _2025_11_20_22_34_add_list_of_links_for_events.py  _2025_11_21_00_01_add_image_file_id_field_for_minio.py  _2025_12_10_03_05_add_check_in_type_enum_and_check_in_link.py  _2025_12_10_19_13_make_enum_names_uppercase.py  _2026_02_10_21_25_make_host_a_list_of_host_objects.py  _2026_02_13_21_38_add_check_in_closes_field.py  _2026_06_28_20_07_add_workshop_approval.py  af0b8cd0841b_new_field_in_user.py  c9cb64c7e39f_add_users_workshop_checkin_table.py
app/: security.py
app/api/routes/: users.py  workshops.py
app/crud/: config.py
app/models/: check_in.py  user.py  workshop.py
app/routes/: users.py  workshops.py
app/services/: excel_parser.py
docs/quality-assurance/: quality-attribute-scenarios.md  user-acceptance-tests.md
nginx/: nginx.conf
scripts/: drop.py  init-db.sql  migrate.py  test_workshops.py  validate_data.py
src/: __init__.py  config.py  config_schema.py  custom_pydantic.py  logging.py  logging_.py  prepare.py  security.py
src/api/: __main__.py  app.py  dependencies.py  docs.py  exceptions.py  lifespan.py  routers.py
src/modules/: inh_accounts_sdk.py  innohassle_accounts.py
src/modules/clubs/: dependencies.py  schemas.py
src/modules/tokens/: dependencies.py  repository.py  schemes.py
src/modules/users/: dependencies.py  enums.py  repository.py  routes.py  schemas.py  schemes.py
src/modules/workshops/: dependencies.py  enums.py  minio.py  repository.py  routes.py  schemas.py  schemes.py  utils.py
src/storages/: minio.py
src/swp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tests/: conftest.py  test_routes.py  test_user_repository.py  test_workshop_repository.py  test_workshop_routes.py
src/utils/: utils.py
(+10 files in other folders)
