[project]
name = "workshops"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "alembic>=1.17.0",
    "alembic-postgresql-enum>=1.8.0",
    "asyncpg>=0.30.0",
    "authlib>=1.6.5",
    "colorlog>=6.9.0",
    "fastapi-swagger>=0.3.35",
    "fastapi[standard]>=0.119.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-utils>=0.42.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-async-sqlalchemy>=0.2.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
