[project]
name = "workshops"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "alembic>=1.18.4",
    "alembic-postgresql-enum>=1.10.0",
    "asyncpg>=0.31.0",
    "joserfc>=1.6.5",
    "colorlog>=6.10.1",
    "fastapi-swagger>=0.4.49",
    "fastapi[standard]>=0.136.1",
    "gunicorn>=26.0.0",
    "minio>=7.2.20",
    "psycopg2-binary>=2.9.12",
    "python-magic>=0.4.27",
    "pyvips>=3.1.1",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-utils>=0.42.1",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "prek>=0.3.13",
    "pytest>=9.0.3",
    "pytest-async-sqlalchemy>=0.2.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
